fix : sonarqube 관련 이슈 수정